Concept of Bi predicate